--- a/06_Paper/ER-ED/ERED_Stage2/Discussion.Rmd
+++ b/06_Paper/ER-ED/ERED_Stage2/Discussion.Rmd
@@ -36,7 +36,7 @@ It was nevertheless surprising that the strategy suppression showed on average a
 In the case of the EMG measurement, this could be due to the fact that the result of the implementation of the instructions ("Maintain a neutral facial expression") is measured directly.
 This also indicates why the required effort is the lowest. 
 The direct instruction to implement the strategy reduces the complexity of the generation process.
-By comparison, distancing increases the complexity, for example, because it requires a distanced reappraisal of the stimulus.
+By comparison, distancing increases the complexity, because it requires a distanced reappraisal of the stimulus.
 Ultimately, these two aspects are expressed in terms of greater utility: The implementation of the instructions requires comparatively less effort. 
 In addition, one receives relatively direct feedback from one's own facial muscle activity as to how well the strategy suppression has been implemented.
 In the case of the strategies distraction and distancing, a more detailed evaluation of internal states must take place in order to assess the utility of the strategies.
